# kiro-loop-engine

./: .gitignore  README.md  pyproject.toml
.kiro/hooks/: intake-trigger.kiro.hook  loop-controller-hook.kiro.hook  post-save-verify.kiro.hook  self-correction-loop.kiro.hook  stop-on-shell-error.kiro.hook  task-start-scan.kiro.hook  test-success-advance.kiro.hook
.kiro/loop/: control.md
.kiro/scripts/: verify.ps1  verify.sh
.kiro/specs/loop-engine/: requirements.md  tasks.md
.kiro/steering/: autonomous-mode.md  context-compaction.md  global-constraints.md  intake-protocol.md
kiro_loop_engine/: __init__.py  cli.py  constants.py  engine.py  execution_engine.py  loop_controller.py  models.py  parser.py  result_writer.py  safety.py  tracer.py  verification.py
kiro_loop_engine/handlers/: __init__.py  base.py  code_generator.py  code_modifier.py
raw_inputs/: README.md  gemini-code-1782189208309.html
src/hooks/: loop-controller-hook.kiro.hook  stop-on-shell-error.kiro.hook
src/kiro_loop_engine/: __init__.py  cli.py  engine.py  execution_engine.py  loop_controller.py  models.py  parser.py
src/kiro_loop_engine/handlers/: maintenance.py  test_runner.py
templates/: transaction-receipt.html
tests/: test_receipt_structure.py
