[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kiro-loop-engine"
version = "1.0.0"
description = "Reusable loop engineering plugin for Kiro IDE - file-driven parse-execute-write automation"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "CRM Data Agent Team" },
]
keywords = ["kiro", "loop-engine", "automation", "ide-plugin"]

[project.urls]
Homepage = "https://github.com/YOUR_USERNAME/kiro-loop-engine"
Repository = "https://github.com/YOUR_USERNAME/kiro-loop-engine"
Issues = "https://github.com/YOUR_USERNAME/kiro-loop-engine/issues"

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
dev = [
    "hypothesis>=6.100.0",
    "pytest>=8.0.0",
    "pytest-timeout>=2.3.0",
]
fabric = [
    "fabric-mcp-server",
]

[project.scripts]
kiro-loop = "kiro_loop_engine.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/kiro_loop_engine"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
